# tutoria_language

./: .gitignore  old_requirements.txt  pyproject.toml  requirements.txt  run.py  telegram_bot.py
docs/diagramas/md/: arquitectura_general.md
src/language_tutor/: __init__.py  api.py  config.py  main.py
src/language_tutor/agents/: __init__.py  base_agents.py
src/language_tutor/configs/: __init__.py  agent_roles.json  team_configs.json
src/language_tutor/tools/: __init__.py  image_tools.py  language_tools.py
